--- a/site/public/css/cadastro.css
+++ b/site/public/css/cadastro.css
@@ -3,6 +3,31 @@ body{
     padding: 0;
     font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+input{
+  border: 2px solid black;
+  width: 60%;
+  height: 6%;
+}
+
+button{
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  cursor: pointer;
+  width: 60%;
+  height: 10%;
+  transition: 0.8s;
+}
+button:hover{
+  background-color: orange;
+  color: black;
+  width: 65%;
+  height: 15%;
+}
+
+
+
 .tela {
     display: flex;
     align-items: center;
@@ -10,6 +35,7 @@ body{
     height: 100vh;
     width: 100%;
     background-image: url(../assets/fundopretobranco.webp);
+    background-size: contain;
   }
   
   .containerCadastro{
@@ -19,6 +45,7 @@ body{
     flex-direction: row;
     width: 65%;
     height: 90%;
+    border: 2px solid black;
   }
 
   .containerCadastroDireito{
@@ -27,7 +54,9 @@ body{
     justify-content: center;
     height: 100%;
     width: 50%;
-    background-color: white;
+    background-image: url(../assets/FundoLogin3.gif);
+    background-size: cover;
+    border: 2px solid black;
   }
   .containerCadastroEsquerdo{
     display: flex;
@@ -36,7 +65,8 @@ body{
     justify-content: center;
     height: 100%;
     width: 50%;
-    background-color:white;
+    background-image: url(../assets/KakashiFundo.jpg);
+
   }
   .Cadastro{
     display: flex;
@@ -52,6 +82,7 @@ body{
     justify-content: center;
     width: 100%;
     height: 15%;
+    font-size: xx-large;
   }
   .CadastroMeio{
     display: flex;
@@ -76,7 +107,6 @@ body{
     width: 230px;
     position: fixed;
     border: 2px solid black;
-    margin-right: 10%;
   }
   
   .card_erro #mensagem_erro{
