--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -33,7 +33,15 @@ header a:hover {
     background-color: black;
     color: white;
 }
-
+#usuarioSession{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+}
 .menu-container {
     height: 50%;
     width: 5%;
@@ -62,21 +70,18 @@ header a:hover {
 .menu-options {
     display: none;
     position: absolute;
-    top: 8vh; /* Alinha o menu logo abaixo do header */
-    right: 0;
+    top: 8vh; 
     background-color: rgba(255, 255, 255, 0.9);
     border: 2px solid black;
     z-index: 1001;
-    width: 150px
+    width: 200px;
 }
 
 .menu-options a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     display: block;
-    padding: 5px 10px;
     text-decoration: none;
     color: black;
     transition: 0.3s;
@@ -257,7 +262,7 @@ header a:hover {
     align-items: center;
     width: 100%;
     height: 50%;
-    font-size: 5vh;
+    font-size: 4vh;
     color: white
 }
 .iconesPersonagem{
@@ -267,6 +272,10 @@ header a:hover {
     justify-content: center;
     width: 100%;
     height: 50%;
+}
+.iconesPersonagem span{
+    color: white;
+    font-size: xx-large;
 }
 
 .direitaPersonagem{
@@ -343,7 +352,7 @@ header a:hover {
     align-items: center;
     width: 100%;
     height: 50%;
-    font-size: 5vh;
+    font-size: 4vh;
     color: rgb(0, 0, 0);
 }
 .iconesPersonagemInverso{
@@ -353,31 +362,11 @@ header a:hover {
     justify-content: center;
     width: 100%;
     height: 50%;
-    
 }
-#imagemKakashi{
-    background-image: url(../site/imagensNaruto/Kakashi_Dual_Rinnegan.webp);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-#imagemSakura{
-    background-image: url(../site/imagensNaruto/Sakura_Byakugou.webp);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-#imagemSasuke{
-    background-image: url(../site/imagensNaruto/SAsuke_Hebi.webp);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-}
-#imagemNaruto{
-    background-image: url(../site/imagensNaruto/Kurama_Chakra_Modo.webp);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
+
+.iconesPersonagemInverso span{
+    color: black;
+    font-size: xx-large;
 }
 
 .direitaPersonagemInverso{
@@ -589,15 +578,36 @@ header a:hover {
 .OnuTitulo{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 7%;
     width: 90%;
-    font-size: 4vh;
+    font-size: 3.5vh;
 }
-.OnuImagem{
+.OnuImagem1{
     height: 50%;
     width: 90%;
-    background-image: url(../assets/fundoBecoKonoha.jpg);
+    background-image: url(../assets/saudebemestar.jpg);
+    background-size: cover;
+    border: 2px solid black;
+}
+.OnuImagem2{
+    height: 50%;
+    width: 90%;
+    background-image: url(../assets/desigualdade.jpg);
+    background-size: cover;
+    border: 2px solid black;
+}
+.OnuImagem3{
+    height: 50%;
+    width: 90%;
+    background-image: url(../assets/Paz.jpg);
+    background-size: cover;
+    border: 2px solid black;
+}
+.OnuImagem4{
+    height: 50%;
+    width: 90%;
+    background-image: url(../assets/5kages.webp);
     background-size: cover;
     border: 2px solid black;
 }
@@ -834,10 +844,25 @@ header a:hover {
     color: black;
 
 }
-.fotoEP{
+.fotoEP339{
     height: 40%;
     width: 70%;
-    background-image: url(../assets/minato2.jpg);
+    background-image: url(../assets/EP339.jpg);
+    background-size: cover;
+    border: 2px solid black;
+}
+.fotoEP168{
+    height: 40%;
+    width: 70%;
+    background-image: url(../assets/ep168.jpg);
+    background-size: cover;
+    border: 2px solid black;
+}
+.fotoEP249{
+    height: 40%;
+    width: 70%;
+    background-image: url(../assets/ep249.jpg);
+    background-size: cover;
     border: 2px solid black;
 }
 .descEP{
