--- a/site/public/css/stylehome2.css
+++ b/site/public/css/stylehome2.css
@@ -4,8 +4,8 @@
     justify-content: space-between;
     width: 100%;
     height: 100vh;
-    background-image: url(../assets/fundoIndex.jpg);
-    background-size: contain;
+    /* background-image: url(../assets/naruto-naruto-shippuden.gif); */
+    background-size: cover;
 }
 
 #esquerda {
@@ -25,7 +25,6 @@
     justify-content: space-between;
     width: 200vh;
     height: 10%;
-    background-color: aquamarine;
 }
 #header a{
     font-size: 4vh;
