--- a/site/public/css/stylehome2.css
+++ b/site/public/css/stylehome2.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     width: 100%;
     height: 100vh;
-    /* background-image: url(../assets/naruto-naruto-shippuden.gif); */
+    background-image: url(../assets/Index.jpg);
     background-size: cover;
 }
 
